--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^6.2.0",
     "next": "^7.0.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
