--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
-    "next/babel",
     "@babel/preset-react",
-    "@babel/preset-env"
-  ]
+    "@babel/preset-env",
+    "next/babel"
+  ],
+  "plugins": ["babel-plugin-styled-components"]
 }
