--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "contentful": "^7.1.0",
     "dotenv": "^6.2.0",
     "next": "^7.0.2",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "styled-components": "^3.4.10"
