--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "author": "Will Hitchcock <hi@willhitchcock.me> (willhitchcock.me)",
   "scripts": {
-    "dev": "next --inspect",
+    "dev": "node --inspect server/index.js",
     "build": "next build",
-    "start": "next start",
-    "postinstall": "npm run getcontent",
-    "getcontent": "babel-node util/getcontent.js",
+    "start": "NODE_ENV=production node server/index.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint .",
@@ -23,6 +21,9 @@
     "babel-eslint": "^10.0.1",
     "contentful": "^7.1.0",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "lodash": "^4.17.11",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
