--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "author": "Will Hitchcock <hi@willhitchcock.me> (willhitchcock.me)",
+  "engines": {
+    "node": "10.15.1"
+  },
   "scripts": {
     "dev": "node --inspect server/index.js",
     "build": "next build",
@@ -20,6 +23,7 @@
     "@storybook/addons": "^4.0.2",
     "@storybook/react": "^4.0.2",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-styled-components": "^1.10.0",
     "contentful": "^7.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -34,7 +38,6 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
-    "babel-plugin-styled-components": "^1.10.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
