--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node --inspect server/index.js",
     "build": "next build",
-    "start": "npm run build && NODE_ENV=production node server/index.js",
+    "start": "npm run build && node server/index.js",
     "storybook": "start-storybook -p -s ./static -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint .",
