--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,14 @@
     "@babel/preset-env",
     "next/babel"
   ],
-  "plugins": ["babel-plugin-styled-components"]
+  "plugins": [
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ]
+  ]
 }
