--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-markdown": "^4.0.6",
-    "styled-components": "^3.4.10"
+    "shoelaces": "^0.2.1",
+    "styled-components": "^4.1.3",
+    "styled-shoelaces": "^0.2.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
