--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-markdown": "^4.0.6",
+    "recompose": "^0.30.0",
     "shoelaces": "^0.2.1",
     "styled-components": "^4.1.3",
     "styled-shoelaces": "^0.2.1"
