Add Storyshots support for constellations

--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,10 @@
         "preprocess": false
       }
     ]
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["require-context-hook"]
+    }
+  }
 }
