--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-storyshots": "^5.0.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
@@ -49,7 +51,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^23.6.0",
+    "jest": "^24.3.1",
     "jest-styled-components": "^6.3.1"
   }
 }
