--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "@storybook/addon-actions": "^5.0.0",
-    "@storybook/addon-links": "^5.0.0",
+    "@storybook/addon-knobs": "^5.0.0",
     "@storybook/addons": "^5.0.0",
     "@storybook/react": "^5.0.0",
     "babel-eslint": "^10.0.1",
