--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
       "expect": true
     },
     "rules": {
-      "arrow-parens": ["error", "always"]
+      "arrow-parens": ["error", "always"],
+      "import/no-extraneous-dependencies": ["error", {"devDependencies": ["test/**/*", "**/*.test.js", "**/*.stories.jsx"]}]
     }
 }
