--- a/package.json
+++ b/package.json
@@ -18,16 +18,11 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "@storybook/addon-actions": "^4.0.2",
-    "@storybook/addon-links": "^4.0.2",
-    "@storybook/addons": "^4.0.2",
-    "@storybook/react": "^4.0.2",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "contentful": "^7.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
     "lodash": "^4.17.11",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
@@ -41,6 +36,11 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-knobs": "^5.0.0",
+    "@storybook/addon-storyshots": "^5.0.0",
+    "@storybook/addons": "^5.0.0",
+    "@storybook/react": "^5.0.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
@@ -49,7 +49,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^23.6.0",
+    "jest": "^24.3.1",
     "jest-styled-components": "^6.3.1"
   }
 }
